# aterm

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/skills/e2e-test/: SKILL.md
.claude/skills/ui-change/: SKILL.md
.github/workflows/: ci.yml  release.yml
scripts/: Dockerfile.test  e2e.sh  test-docker.sh  test-entrypoint.sh
scripts/macos/: entitlements.plist
src/: app.rs  binding.rs  box_drawing.rs  config.rs  cwd.rs  debug_ipc.rs  gfx.rs  input.rs  main.rs  quad.rs  terminal.rs
tests/: integration.rs
tests/common/: mod.rs
