[package]
name = "aterm"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[dependencies]
alacritty_terminal = "0.26"
winit = "0.30"
wgpu = "29"
glyphon = "0.11"
pollster = "0.4"
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
bytemuck = { version = "1", features = ["derive"] }
crossbeam-channel = "0.5"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
dirs = "5"
arboard = "3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
