[package]
name = "aterm"
version = "0.3.2"
edition = "2021"
rust-version = "1.85"
description = "A minimal tabbed terminal built on alacritty_terminal, winit, and wgpu."

[package.metadata.bundle]
name = "aterm"
identifier = "com.gartnera.aterm"
short_description = "Minimal tabbed terminal."
category = "public.app-category.developer-tools"
osx_minimum_system_version = "11.0"

[dependencies]
alacritty_terminal = "0.26"
winit = "0.30"
wgpu = "29"
glyphon = "0.11"
pollster = "0.4"
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
bytemuck = { version = "1", features = ["derive"] }
crossbeam-channel = "0.5"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
arboard = "3"

[target.'cfg(unix)'.dependencies]
# tcgetpgrp() for foreground-process detection (both Linux and macOS).
# On macOS also: proc_pidinfo/PROC_PIDVNODEPATHINFO for cwd-of-PID and
# proc_name for the process name. Linux reads /proc for those two.
libc = "0.2"

[dev-dependencies]
serde_json = "1"
tempfile = "3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
